These changes make Dada Mail 3.0 into Dada Mail 4.0. Yeah!

--- a/dada/extras/documentation/pod_source/changes_3_x.pod
+++ b/dada/extras/documentation/pod_source/changes_3_x.pod
@@ -1,185 +1,6 @@
 =pod
 
-=head1 Dada Mail Changelog for version 3.x.x
-
-=head1 3.1.0
-
-=head2 Download 3.1.0 
-
-... Forthcoming...
-
-=head2 Changes 3.1.0
-
-=head2 Bug Fixes 3.1.0
-
-=over
-
-=item *  2222381  	 3.0.0 - DADA::App::Guts::available_lists() needs caching
-
-https://sourceforge.net/tracker2/?func=detail&aid=2222381&group_id=13002&atid=113002
-
-=item * 2219954  	 3.0.0 - Guts.pm sub available_lists param, -Dont_Die broken
-
-https://sourceforge.net/tracker2/?func=detail&aid=2219954&group_id=13002&atid=113002
-
-=item *  2219912  	 3.0.0 - DBI attribute: InactiveDestroy used incorrectly
-
-https://sourceforge.net/tracker2/?func=detail&aid=2219912&group_id=13002&atid=113002
-
-=item *  2215463  	 3.0.0 - typo: s/us/use/ in edit_type_screen.tmpl
-
-https://sourceforge.net/tracker2/?func=detail&aid=2215463&group_id=13002&atid=113002
-
-=item * 2202878  	 3.0.0 - don't/won't in privacy policy description
-
-https://sourceforge.net/tracker2/?func=detail&aid=2202878&group_id=13002&atid=113002
-
-=item * 3.0.0 -  This Mass Mailing will be queued msg has wrong info
-
-https://sourceforge.net/tracker2/?func=detail&aid=2204797&group_id=13002&atid=113002
-
-=item * 	 2219972 	3.0.0 - Mailout.pm - associate method broken
-
-https://sourceforge.net/tracker2/?func=detail&aid=2219972&group_id=13002&atid=113002
-
-=item * 3.0.0 - Stale Mailout can still clog up mail queue
-
-https://sourceforge.net/tracker2/?func=detail&aid=2203220&group_id=13002&atid=113002
-
-=item * 3.0.0 - Limited Docs for DADA::MailingList::Settings
-
-https://sourceforge.net/tracker2/?func=detail&aid=2167007&group_id=13002&atid=113002
-
-=item *  2191258  	 3.0.0 - email addresses with newlines are seen as valid
-
-https://sourceforge.net/tracker2/?func=detail&aid=2191258&group_id=13002&atid=113002
-
-=item * 3.0.0 - Beatitude Docs outdated - esp. Cronjob instructions
-
-https://sourceforge.net/tracker2/?func=detail&aid=2119974&group_id=13002&atid=113002
-
-
-=item * 3.0.0 - multiple_subscribe.cgi docs wrong about "lists" para
-
-https://sourceforge.net/tracker2/?func=detail&aid=2183150&group_id=13002&atid=113002
-
-=item * 2185937  	 3.0.0 - qmail_error_5dot5dot1 contains two actions
-
-https://sourceforge.net/tracker2/?func=detail&aid=2185937&group_id=13002&atid=113002
-
-=item * 3.0.0 - SMTP Options POP-before-SMTP Auth Mode option broken
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2167224&group_id=13002&atid=113002
-
-=item * 3.0.0 - POP-before-SMTP test never uses Mode or SSL prefs
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2167227&group_id=13002&atid=113002
-
-=item * 1971599 3.0 b3 - Character Set encoding Email Headers unsupported
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=1971599&group_id=13002&atid=113002
-
-=item * 2167322  	  3.0.0 - DADA::App::POP3Tools _lock_pop3_check error
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2167322&group_id=13002&atid=113002
-
-=item * 2007462  	  3.0.0 - example .dada_config's uncut for %LIST_SETUP_INCLUDE
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2007462&group_id=13002&atid=113002
-
-=item *  3.0.0 - Send last msg to new subscribers msg corrupted?
-
-http://sourceforge.net/tracker/index.php?func=detail&aid=2099456&group_id=13002&atid=113002
-
-=item * [ 2099488 ] 3.0 - Dada Bridge only appends list shortname
-
-http://sourceforge.net/tracker/index.php?func=detail&aid=2099488&group_id=13002&atid=113002
-
-=item * 2030573 	Dadamail 3.0 strips out [endif]
-
-http://sourceforge.net/tracker/index.php?func=detail&aid=2030573&group_id=13002&atid=113002
-
-=item * [ 2104069 ] 3.0.0. - RPC ping urls not list in archive options -> adv.
-
-http://sourceforge.net/tracker/index.php?func=detail&aid=2104069&group_id=13002&atid=113002
-
-=item * 2120407  	  3.0.0 - DADA Mail Admin login problem
-
-http://sourceforge.net/tracker/index.php?func=detail&aid=2120407&group_id=13002&atid=113002
-
-=item *  	  3.0.0 - Log viewer doesn't escape ">" "<" in searches
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2124123&group_id=13002&atid=113002
-
-=item * [ 2147102 ] 3.0.0 - "Open List in New Window" has unwanted linebreak?
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2147102&group_id=13002&atid=113002
-
-=item * [ 2120386 ] 3.0.0 - Scheduled Mailing Time problem with 12 am
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2120386&group_id=13002&atid=113002
-
-=item * 2145145  	  3.0.0 - Send a Webpage msg w/Clickthrough Links Fails
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2145145&group_id=13002&atid=113002
-
-=item * [ 2147406 ] 3.0.0 - POP3 test never uses AUTH_MODE or, USESSL
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2147406&group_id=13002&atid=113002
-
-=item * 2148744  	  3.0.0 - Adv. install Instructions unclear about passwords
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2148744&group_id=13002&atid=113002
-
-=item *  2120035  	  3.0.0 - "Warning! Mailout seems broken!"
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=2120035&group_id=13002&atid=113002
-
-I<As noted in the bug report, this may be an ongoing problem, but currently, we're trying to solve
-the problem by adding semaphore locking support for every file (and even the directory)> that makes up 
-the meta data of a mass mailing
-
-=back
-
-=head2 3.1.0 Features
-
-=over
-
-=item * Beatitude - Fetch message from URL has same options as, "Send a Webpage" 
-
-Mostly meaning, you can embed images within the email message itself. 
-
-=item * Mystery Girl
-
-You can now specify the Port Number of the POP3 mail server
-
-=item * Mass Mailings keep their own log
-
-This means, that anything about the mass mailing is logged for that specific mass mailing - 
-this should hopefully make debugging a little bit easier. 
-
-=item * View the Mass Mailing Log from the Mailing Monitor
-
-There's a new link entitled, "Open Mass Mailing Log in a New Window -> "
-
-This functionality is currently extremely rough, but is a pretty easy way to see what, in fact, is going on. 
-
-=item * Slightly Smarter Error Handling for failing sendmail mailings
-
-We've started catching sendmail errors and, if we find an error, we'll exit out of the 
-sending process, for the message to be automatically picked up and the last email 
-that had a problem, to be tried again. It's currently not perfect, but it's a very small 
-step forward.
-
-=item * Slightly better UTF-8 support. 
-
-This version of Dada Mail is currently shipped with all charsets and encodings to, "UTF-8", but Dada Mail itself is far from support this character set completely. 
-
-This is because it is hard. 
-
-
-=back
-
+ This should be filled in with the FINAL changelog for 3.x...?
 
 
 =head1 3.0.0
