--- a/dada/extras/documentation/pod_source/dada3_to_dada4.pod
+++ b/dada/extras/documentation/pod_source/dada3_to_dada4.pod
@@ -1,151 +1,74 @@
 =pod
 
-=head1 Dada Mail 3 to Dada Mail 4 Guide
+=head1 Dada Mail 3 to Dada Mail 4 Upgrade Guide
 
-=head1 Installation
+=head1 Changes to the Installation Process
 
-If you are doing a clean installation of Dada Mail, the same installation instructions for 
-Dada Mail, version 3.0.x will work for Dada Mail 4.0
+There's no change to the installation process. Hurray! (Hopefully). 
 
-L<http://dadamailproject.com/installation>
+This means, there's nothing new you'll need to do, so if you're familiar and comfortable 
+in installing Dada Mail 3.x, you'll be comfortable in installing Dada Mail 4.x. 
 
-=head1 Upgrading
+Various configuration variables HAVE changed, so if you have your own custom C<.dada_config> 
+file you like to use for multiple clients, you'll want to revise that, to be updated for 4.x. 
 
-If you are using the default backend for Dada Mail (This means: you ARE NOT using the SQL backend) 
-upgrade instructions are the same they've always been: 
+=head1 Upgrading Dada Mail 3.x to Dada Mail 4.x 
 
-L<http://dadamailproject.com/installation/upgrading.html>
+=head2 Default Backend
 
-If you are upgrading and ALSO running Dada Mail, using the SQL backend, you will have to 
-migrate your SQL table schema and Dada Mail Subscriber Profile Fields information to 
-the new SQL table schema. Upgrade as before (don't worry you MAY get an error message) 
-and then run the 3.0 to 4.0 migration utility: 
+If you are using the B<default> backend, there's nothing extra you will need to know or do. 
+The usual upgrade instructions will work just fine. 
+
+The B<default> backend basically means you ARE NOT using the SQL backend. 
+
+=head2 SQL Backend
+
+If you want to upgrade your Dada Mail 3.x installation to 4.x AND you are using the SQL backend (which we do suggest) 
+
+You have ONE step you'll need to do, to make Dada Mail work. 
+
+=head3 Background on Changes
+
+Dada Mail 4.x has a different I<SQL Schema> than Dada Mail 3.x. It's not terribly different, but
+it's different enough that if you try to upgrade to Dada Mail 4.x, without changing your SQL Schema, 
+it won't work. Dada Mail WILL tell you and the worst thing that will happen is: you won't be able to use the program (all your information WILL be safe.) 
+
+=head3 Changing the SQL Schema
+
+"Changing teh SQL Schema" sounds very frightening, we know, but thankfully, we've made a 
+migration tool for you that does all the hard work. All you need to do is upgrade your Dada Mail 3.x to 
+Dada Mail 4.x and run the migration tool. If you forget you need to run the migration tool, Dada Mail 
+will remind you. 
+
+Here is the information on finding/using and running the 3.x to 4.x migration tool: 
 
 L<http://dadamailproject.com/support/documentation/dada3_to_dada4_sql.pl>
 
-You will also want to read through the 3.0 to 4.0 API/Configuration docs: 
+Please! make sure to make manual backups of your SQL table information - all of it, so 
+in the event of a castastrophic error, you'll be OK. 
 
-L<http://dadamailproject.com/support/documentation/dada_3_0_to_dada_3_0.pod.html>
+=head2 .dada_config changes you'll want to know about
 
-There may be a few things you MAY to add into your outside config file, to get Dada Mail working correctly. 
+If you're running Dada Mail without an outside config file (called, C<.dada_config> you
+may have to make changes to what's saved in that file. 
 
-=head1 Features
+If you want to see what an example C<.dada_config> file looks like, open up: 
 
-=head2 Subscriber Profiles
+I<dada/extras/examples/example_dada_config.txt>
 
-Please see the docs specifically about Dada Mail Subscriber Profiles:
+Here's what to look out for: 
 
-L<http://dadamailproject.com/support/documentation/feature-profiles.pod.html>
+=head3 %SQL_PARAMS
 
-=head2 Subscriber Profile Field Labels
+%SQL_PARAMS holds the configuration information, so that you can connect to the SQL server. 
 
-You can now have a, "Label" to your Subscriber Profile Field. A label is what's 
-visibly shown and is not now created from the field's name. 
+It also holds the names of the tables that Dada Mail works with. 
 
-=head2 Clone Settings
+The connection configuration information is the same, so if it's working for 3.x, it'll work for 4.x
 
-You can now clone the settings from one list, to another list, in the, "Create a New List" screen. 
+What has changed is the addition of several new table names. 
 
-=head2 Remove All Subscribers
-
-You can now Remove all subscribers at once in the, I<Manage List - View Subscribers> screen. 
-
-=head2 prototype.js/Scriptalicious Support
-
-For the most part, AJAX stuff in Dada Mail has been replaced by the prototype.js 
-and Scriptalicious Javascript Libraries. 
-
-=head2 Black List Matching
-
-If it wasn't clear or official before, it should be now:
-
-The black list matching does not work with matching strings, but will only work to 
-match the user or domain of an email address or the entire email address. These are valid black list entries: 
-
-=over
-
-=item * matchthis@
-
-=item * @matchthis
-
-=item * matchthis 
-
-=item * matchthis@example.com
-
-=back
-
-=head2 UTF-8 Support and Correctly Encoding Email Message Headers
-
-See the separate docs on UTF-8 support: 
-
-L<http://dadamailproject.com/support/documentation/features-UTF-8.pod.html>
-
-=head2 Multiple List Sending
-
-Support has be re-introduced to allow Multiple List Sending. See the separate docs on this feature: 
-
-L<http://dadamailproject.com/support/documentation/feature-multiple_list_sending.pod.html>
-
-=head1 CPAN Perl Libraries 
-
-The CPAN Perl Libraries needed for Dada Mail are now being saved within the 
-Git Repository of Dada Mail. We don't know if this is the greatest idea, since we don't 
-really plan on making changes to this modules. But, we're doing it. If any problems 
-occur, please report!
-
-=head2 Mass Subscriptions
-
-There's now an option to disable mass subscriptions. 
-
-=head2 Plugins - Dada Bridge
-
-Simple moderation support is included, to Authorized to moderate messages. 
-
-=head2 Plugins - Clickthrough Tracker
-
-The Clickthrough Tracker now has a new SQL backend option for the URL redirect list. 
-
-The log is still in PlainText. 
-
-=head2 Extensions - Update Subscriptions
-
-The update_subscriptions.cgi extension has been removed, as its features have been superceded by the Dada Profiles
-feature. And then some. 
-
-=head1 API
-
-There are many new modules in Dada Mail's backend, including: 
-
-=over
-
-=item * DADA::Profile
-
-=item * DADA::Profile::Fields
-
-=item * DADA::Profile::Session
-
-=item * DADA::ProfileFieldsManager
-
-=item * DADA::MailingList::Subscriber
-
-=item * DADA::MailingList::Subscriber::Validate
-
-=back
-
-=head1 Configuration and API Incompatibilities
-
-A few. See the separeate docs on this subject: 
-
-L<http://dadamailproject.com/support/documentation/dada_3_0_to_dada_4_1.pod.html>
-
-
-=head1 Background
-
-=head1 .dada_config changes
-
-=head2 %SQL_PARAMS
-
-%SQL_PARAMS in .dada_config for 3.0.x: 
+The, C<%SQL_PARAMS> in .dada_config for 3.0.x may look like this:  
 
 	%SQL_PARAMS = ( 
 
@@ -174,8 +97,7 @@ L<http://dadamailproject.com/support/documentation/dada_3_0_to_dada_4_1.pod.html
 
 	);
 
-
-%SQL_PARAMS in .dada_config for 3.1: 
+In 4.x, it's going to look like this: 
 
 	%SQL_PARAMS = ( 
 
@@ -208,78 +130,72 @@ L<http://dadamailproject.com/support/documentation/dada_3_0_to_dada_4_1.pod.html
 
 	);
 
-New lines: 
+New lines in 4.x: 
 
 		profile_table                   => 'dada_profiles', 
 		profile_fields_table 	        => 'dada_profile_fields', 
 		profile_fields_attributes_table => 'dada_profile_fields_attributes',
 		clickthrough_urls_table         => 'dada_clickthrough_urls',
 
-If you DO NOT put these lines in your .dada_config file, Dada Mail will attempt to massage your configuration to work, anyways. 
+Like we mentioned, these new lines are C<just> listing the names of the new tables for Dada Mail, 4.x. 
 
-=head1 New SQL Tables to Create
+If you DO NOT put these lines in your C<.dada_config file>, Dada Mail will attempt to massage your configuration to work, anyways. 
 
-If you do not want to create the new SQL Tables and change the schema of the old SQL tables, we suggest
-using our own 3.0 to 3.1 migration tool. More information: 
+=head2 $ADMIN_MENU
 
-L<http://dadamailproject.com/support/documentation/dada_3_to_dada_3.1_sql.pl.html>
+The C<$ADMIN_MENU> variable has changed, to help make things a little more organized. The changes are
+little too verbose to put in this doc, but its suggested that you delete the entire variable and re-paste 
+the C<$ADMIN_MENU> variable for the example C<.dada_config> file
 
-We suggest using the migration tools ourselves. 
+I<dada/extras/examples/example_dada_config.txt>
 
-Make the following tables: 
+=head2 Dada Mail Profile Options
 
-=over
+The example C<.dada_config> file does include global variables for the new Dada Profiles feature. 
 
-=item * dada_profiles
+They'll look something like this: 
 
-=item * dada_profile_fields
+	=cut
+	# start cut for Dada Mail Profile Options
 
-=item * dada_profile_fields_attributes
+	$PROFILE_ENABLED                         = 1; 
+	$PROFILE_EMAIL                           = ''; 
+	$PROFILE_ENABLE_CAPTCHA                  = 1;
+	$PROFILE_ENABLE_MAGIC_SUBSCRIPTION_FORMS = 1;
 
-=item * dada_clickthrough_urls
+	$PROFILE_COOKIE_PARAMS = {
+		-name   => 'dada_profile',  
+	    -path    => '/',
+	    -expires => '+7d',	
+	};
 
-=back
+	$PROFILE_GRAVATAR_OPTIONS = {
+		enable_gravators     => 1, 
+		default_gravatar_url => undef, 
+	};
 
-=head2 New Schemas
+	=cut
+	# end cut for Dada Mail Profile Options
 
-The Schemas for each database/table is located in the dada/extras/SQL directory of the distribution. 
+If you would like to use them, make sure to take the following lines out of your copy of the C<.dada_config> file: 
 
-For the exception of the, C<dada_subscribers> table, all previous table schemas are essentially the same. 
+ =cut
+ # start cut for Dada Mail Profile Options
 
-Subscriber Profile Fields information that once used to live in the C<dada_subscribers> table, now lives in the C<dada_profile_fields> table. The migration tool mentioned above will move that information from where it was, to where it has to go. 
+and, 
 
-=head2 $CLICKTHROUGH_DB_TYPE
+ =cut
+ # end cut for Dada Mail Profile Options
 
-The new C<dada_clickthrough_urls> table holds the URL redirects for the clickthrough tracker. 
+For more information on what these variables do, see the documentation embedded in the C<Config.pm> file: 
 
-=head1 New Template Variables in the List Template (default_list_template.tmpl)
+L<http://dadamailproject.com/support/documentationConfig.pm.html#dada_mail_profile_options>
 
-=over
+=head2 List of Changes from 3.x to 4.x
 
-=item * show_profile_widget
+The Master (I guess) list of changes from 3.x to 4.x is located at: 
 
-=item * profile_widget
+L<http://dadamailproject.com/support/documentation/changes_4_x.pod.html>
 
-=item * subscribed_to_list
 
-=back
 
-=head1 $PROFILE Variables
-
-=over
-
-=item * $PROFILE_ENABLED
-
-=item * $PROFILE_EMAIL
-
-=item * $PROFILE_ENABLE_CAPTCHA
-
-=item * $PROFILE_ENABLE_MAGIC_SUBSCRIPTION_FORMS
-
-=item * $PROFILE_COOKIE_PARAMS
-
-=item * $PROFILE_GRAVATAR_OPTIONS
-
-=back
-
-=cut
